--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
 </head>
 
 <body>
+    <!-- header start -->
     <header>
-        <h2 class="logo">
-            G3 Architects
-        </h2>
-        <nav class="nav">
+        <nav>
+            <h2 class="section-title">G3 Architects</h2>
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
@@ -21,46 +20,113 @@
                 <li><a href="">Login</a></li>
             </ul>
         </nav>
-    </header>
-    <main>
-        <section class="hero">
+        <section class="banner">
             <div class="banner-content">
-                <h2 class="title">
-                    Brand New
-                    Group of Architects
-                </h2>
-                <p class="subtitle">There are many variations of passages of Lorem Ipsum available, but the majority
-                    have
-                    suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-                <button class="primary-btn">Explore More</button>
+                <h2 class="banner-title">Brand New Group of Architects </h2>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                    look even</p>
+                <button class="btn-primary">Explore More</button>
             </div>
-            <img src="images/banner.png" alt="" class="hero-image">
+            <img src="images/banner.png" alt="" class="banner-image">
         </section>
-        <section class="features">
-            <div class="image-grid">
+    </header>
+    <!-- header end -->
+    <main>
+        <!-- teams section start -->
+        <section class="teams-container">
+            <div class="teams-img-container">
                 <img src="images/team1.png" alt="">
                 <img src="images/team2.png" alt="">
                 <img src="images/team3.png" alt="">
                 <img src="images/team4.png" alt="">
             </div>
-            <div class="features-content">
-                <div class="features-title">Quick list <span class="text-of-our">of Our</span> <span
-                        class="text-features">Features</span></div>
-                <div class="features-subtitle">There are many variations of passages of Lorem Ipsum available, but the
+            <div class="teams-content">
+                <h3 class="teams-title section-title"><span class="quick-list text-light-gray">Quick
+                        list </span><span>of Our</span>
+                    <span class="text-features">Features</span>
+                </h3>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available,
+                    but the
                     majority have suffered alteration in some form, by injected humour, or randomised words which don't
-                    look even</div>
-                <div class="primary-btn">Explore More</div>
+                    look even</p>
+                <button class="btn-primary">Explore More</button>
             </div>
         </section>
-        <section class="offerings"></section>
-        <section class="facts"></section>
+        <!-- features section -->
+        <section class="features">
+            <div class="features-content">
+                <h2 class="section-title">Features you will love & enjoy</h2>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the
+                    majority
+                    have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                </p>
+                <div class="card">
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="card">
+                    <h4>Drag & Drop Builder</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="card">
+                    <h4>Awesome Modern Design</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="card">
+                    <h4>Super Easy to Edit</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+            </div>
+            <div class="feature-img">
+                <img src="images/architect.png" alt="">
+                <div class="ten-year-badge">
+                    <h2>10+ years</h2>
+                    <p>Experience</p>
+                </div>
+            </div>
+        </section>
+        <!-- facts section -->
+        <section class="facts">
+            <div class="section-title">Some Facts</div>
+            <div class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the
+                majority have suffered alteration.</div>
+            <div class="facts-card-container">
+                <div class="card">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h2 class="card-stats">54</h2>
+                    <p class="card-title text-light-gray">Awards Winnings</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/projects.png" alt="">
+                    <h2 class="card-stats">1458</h2>
+                    <p class="card-title text-light-gray">Project Finished</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/customers.png" alt="">
+                    <h2 class="card-stats">590</h2>
+                    <p class="card-title text-light-gray">Clients Worked</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/email.png" alt="">
+                    <h2 class="card-stats">22578</h2>
+                    <p class="card-title text-light-gray">Email Send</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
+        <!-- sponsors section -->
         <section class="sponsor">
-            <h2 class="sponsor-title">Our Sponspors</h2>
-            <p class="sponsor-subtitle subtitle">There are many variations of passages of Lorem Ipsum available, but the
+            <h3 class="section-title">Our Sponspors</h3>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but
+                the
                 majority have suffered alteration.</p>
-            <div class="sponsor-images">
+            <div class="sponsor-img-container">
                 <img src="images/sponsors/spotify.png" alt="">
                 <img src="images/sponsors/amazon.png" alt="">
                 <img src="images/sponsors/google.png" alt="">
