--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     but the
                     majority have suffered alteration in some form, by injected humour, or randomised words which don't
                     look even</p>
-                <button class="btn-primary">Explore More</button>
+                <button class="btn-primary">Explore More</>
             </div>
         </section>
         <!-- features section -->
